<resources>
    <string name="app_name" translatable="false">PriceCollector</string>

    <!-- wspólne -->
    <string name="not_translated">nie przetłumaczone...</string>
    <string name="caption_ok" translatable="false">OK</string>
    <string name="caption_cancel">Anuluj</string>
    <string name="question_close_app">Czy chcesz zamknąć aplikację?</string>
    <string name="caption_yes">Tak</string>
    <string name="caption_no">Nie</string>

    <!-- ??? -->
    <string name="departments_structure_description">struktura działowa</string>

    <!-- for tests -->
    <string name="test_start_screen_label" translatable="false">START SCREEN</string>
    <string name="test_setup_preferences_fragment" translatable="false">PREFERENCES SCREEN</string>
    <string name="test_login_fragment_label" translatable="false">LOGIN FRAGMENT</string>
    <string name="test_main_fragment_label" translatable="false">MAIN FRAGMENT</string>

    <!-- for loging screen -->
    <string name="caption_login_button">Loguj</string>
    <string name="access_denied">Dostęp nie przyznany</string>
    <string name="hint_userlogin">Identyfikator użytkownika</string>
    <string name="hint_password">Hasło</string>
    <string name="enter_user_ID">Podaj identyfikator użytkownika</string>
    <string name="enter_password">Podaj hasło</string>
    <string name="login_data_incorrect">Dane logowania nieprawidłowe...</string>
    <string name="login_server_unavailable">Brak komunikacji z serwerem logowania...</string>
    <string name="firebase_login_problem">Problem z logowaniem do Firebase...</string>
    <string name="user_not_found_in_the_remote_database">W zdalnej bazie danych nie znaleziono danych użytkownika</string>

    <!-- for analysis item -->
    <string name="label_analysis_header">ANALIZA </string>
    <string name="label_analysis_creation_date">Data utworzenia:\u00A0 </string>
    <string name="label_analysis_due_date">Planowana data wykonania:\u00A0 </string>
    <string name="label_analysis_last_sent_date">Data ostatniej wysyłki danych:\u00A0 </string>
    <string name="label_analysis_confirmation_date">Data zamknięcia:\u00A0 </string>

    <!-- for analysis competitor slot -->
    <string name="choose_competitor_store">Wybierz sklep konkurenta</string>
    <string name="add_competitor_store">Dodaj sklep konkurenta</string>
    <string name="edit_competitor_store">Edytuj sklep konkurenta</string>
    <string name="delete_competitor_store">Usuń sklep konkurenta</string>
    <string name="price_analysis">Kontrola cen</string>
    <string name="drive_to_competitor_store">Prowadź do sklepu konkurenta</string>
    <string name="detach_competitor_store">Odłącz sklep konkurenta</string>
    <string name="attach_competitor_store">Przyłącz sklep konkurenta</string>

    <!-- for adding competitor store dialog -->
    <string name="competitor">Konkurent</string>
    <string name="store_name">Nazwa sklepu</string>
    <string name="store_street">Ulica</string>
    <string name="store_city">Miejscowość</string>
    <string name="store_zipcode">Kod pocztowy</string>
    <string name="choose_competitor">Wybierz konkrenta</string>
    <string name="store_name_null">nazwa konkurenta = null</string>
    <string name="enter_store_name">Podaj nazwę sklepu konkurenta</string>
    <string name="city_null">miejscowość = null</string>
    <string name="enter_city_name">Podaj miejscowość</string>
    <string name="street_null">ulica = null</string>
    <string name="enter_street_name">Podaj ulicę</string>
    <string name="zipcode_null">kod pocztowy = null</string>
    <string name="enter_zipcode">Podaj kod pocztowy</string>

    <!-- departments -->
    <string name="r06_department_name">Serwis</string>
    <string name="r10_department_name">Metalowy</string>
    <string name="r20_department_name">Narzędzia</string>
    <string name="r30_department_name">Drewno</string>
    <string name="r40_department_name">Pokrycia podłogowe</string>
    <string name="r50_department_name">Sanitarny</string>
    <string name="r60_department_name">Ogród</string>
    <string name="r70_department_name">Dekoracje</string>
    <string name="r80_department_name">Elektryczny</string>
    <string name="r90_department_name">Budowalany</string>
    <string name="r06_department_symbol" translatable="false">R-06</string>
    <string name="r10_department_symbol" translatable="false">R-10</string>
    <string name="r20_department_symbol" translatable="false">R-20</string>
    <string name="r30_department_symbol" translatable="false">R-30</string>
    <string name="r40_department_symbol" translatable="false">R-40</string>
    <string name="r50_department_symbol" translatable="false">R-50</string>
    <string name="r60_department_symbol" translatable="false">R-60</string>
    <string name="r70_department_symbol" translatable="false">R-70</string>
    <string name="r80_department_symbol" translatable="false">R-80</string>
    <string name="r90_department_symbol" translatable="false">R-90</string>

    <!-- sectors -->
    <string name="sbud_sector_name">Budujesz</string>
    <string name="srem_sector_name">Remontujesz</string>
    <string name="surz_sector_name">Urządzasz</string>
    <string name="sdek_sector_name">Dekorujesz</string>
    <string name="sogr_sector_name">Ogród</string>
    <string name="sok_sector_name">Obsługi Klienta</string>

    <!-- PermissionUtils - skrócone nazwy uprawnień -->
    <string name="short_permission_name_camera">APARAT FOTOGRAFICZNY, KAMERA</string>
    <string name="short_permission_name_internet">INTERNET</string>
    <string name="short_permission_name_read_external_storage">PLIKI Z KARTY PAMIĘCI (SD)</string>
    <string name="short_permission_name_user_account">KONTO UŻYTKOWNIKA</string>

    <!-- do dialogów dot. uprawnień (Permissions) -->
    <string name="nedded_permissions_message_line1">Ta aplikacja potrzebuje zgody na dostęp</string>
    <string name="nedded_permissions_message_line2">do następujących zasobów:</string>
    <string name="nedded_permissions_message_go_to_settings">Przejdź do Ustawień i wyraź odpowiednie zgody.</string>
    <string name="yes_i_want_to_allow_message">Tak - chcę wyrazić zgodę</string>
    <string name="yes_i_want_to_go_to_settings">Tak - chcę przejść do Ustawień</string>
    <string name="no_i_want_to_exit_app_message">Nie - chcę wyjść z aplikacji</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dummy_string" translatable="false">dummy</string>

    <!-- dialog dotyczący pobrania danych analizy -->
    <string name="basic_data_ready_to_download">DANE PODSTAWOWE BADAŃ CEN - GOTOWE DO POBRANIA...</string>
    <string name="articles_data_ready_to_download">DANE ARTYKUŁÓW - GOTOWE DO POBRANIA...</string>
    <string name="question_about_downloading_data">Czy chcesz teraz pobrać dane?</string>
    <string name="short_permission_name_contacts">KONTAKTY</string>

    <!-- dialog dotyczący wysłania rezultatów analizy -->
    <string name="question_about_uploading_data">Czy chcesz teraz wysłać wyniki badania cen?</string>

    <!-- dialog dotyczący wyczyszczenie lokalnej bazy danych -->
    <string name="question_about_clearing_local_data">Czy chcesz wyczyścic dane aplikacji?</string>

    <!-- Dla ActionBarDrawerToggle, ale po co ???-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- opcje menu -->
    <string name="logout_menu_item">Zamknij aplikację</string>
    <string name="go_to_analyzes_list_menu_item">Przejdź do listy badań cen</string>
    <string name="search_articles_list_menu_item">Wyszukaj artykuły</string>
    <string name="clear_local_db">Wyczyść dane aplikacji</string>

    <!-- Dla wyszukiwania artykułów -->
    <string name="articles_search_tab_data_name">DANE</string>
    <string name="articles_search_tab_structure_name">STRUKTURA</string>
    <string name="articles_search_name">Nazwa</string>
    <string name="articles_search_ean" translatable="false">EAN</string>
    <string name="articles_search_sku">Kod</string>
    <string name="articles_search_any_text">Dowolne dane</string>
    <string name="articles_search_sector">Sektor</string>
    <string name="articles_search_department">Dział</string>
    <string name="caption_clear">WYCZYŚĆ</string>
    <string name="caption_search">SZUKAJ</string>
    <string name="sector">Sektor</string>
    <string name="department">Dział</string>

    <!-- Dla edycji Artykułu strategicznego -->
    <string name="clear_competitor_article_data">Wyczyść dane artykułu</string>
    <string name="name_label">Nazwa</string>
    <string name="sku_label" translatable="false">SKU</string>
    <string name="ean_code_label" translatable="false">EAN</string>
    <string name="competitor_price_label">Cena konkurenta</string>
    <string name="reference_article_label">ARTYKUŁ REFERENCYJNY</string>
    <string name="article_remarks_label">Uwagi</string>
    <string name="analyzes_toolbar_text">Badania</string>
    <string name="competitors_toolbar_text">Konkurenci</string>
    <string name="ean_duplication_message_part1">DANE NIE ZOSTAŁY ZAPISANE\nKod EAN</string>
    <string name="ean_duplication_message_part2">\njest już przypisany do innego artykułu</string>
    <string name="send_data_to_remote_db">Wyślij wyniki badania cen</string>
    <string name="populate_10_first">TEST - wypełnij danymi 10 pierwszych</string>
    <string name="only_for_testing">Dostępne wyłącznie na potrzeby testów</string>
    <string name="articles">ARTYKUŁY</string>
    <string name="searching">Wyszukiwanie</string>
    <string name="searching_articles">WYSZUKIWANIE ARTYKUŁÓW</string>
    <string name="threedots_vertical">⋮</string>

    <string name="network_not_available">Brak dostępu do sieci</string>
    <string name="battery_state_low">Naładuj baterię! Poziom naładowania baterii jest niski...</string>
    <string name="articles_list">Lista artykułów</string>
    <string name="ean_codes_list">Lista kodów EAN</string>
    <string name="additional_info">Informacje dodatkowe</string>
    <string name="strategic_articles_list">Lista artykułów strategicznych</string>
    <string name="sectoral_structure">struktura wg rynków</string>
    <string name="structure_by_markets">struktura wg rynków</string>
    <string name="department_structure">struktura działowa</string>
    <string name="users_list">Lista użytkowników</string>
    <string name="departments_list">Lista działów</string>
    <string name="sectors_list">Lista sektorów</string>
    <string name="uo_projects_list">Lista projektów UO</string>
    <string name="families_list">Lista rodzin</string>
    <string name="markets_list">Lista rynków</string>
    <string name="modules_list">Lista modułów</string>
    <string name="locale_country_name_poland" translatable="false">Polska</string>
    <string name="locale_language_name_poland">polski</string>
    <string name="english_country_name_poland">Poland</string>

</resources>
