<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/grp1">
        <item
            android:id="@+id/makeAnalysisMenuItem"
            android:title="@string/price_analysis" />
        <!-- todo item
            android:id="@+id/driveToCompetitorStoreMenuItem"
            android:title="@string/drive_to_competitor_store"/-->
    </group>
    <group
        android:id="@+id/grp2">
        <item
            android:id="@+id/addCompetitorStoreMenuItem"
            android:title="@string/add_competitor_store"/>
        <item
            android:id="@+id/editCompetitorStoreMenuItem"
            android:title="@string/edit_competitor_store"/>
        <item
            android:id="@+id/deleteCompetitorStoreMenuItem"
            android:title="@string/delete_competitor_store"/>
        <item
            android:id="@+id/chooseCompetitorStoreMenuItem"
            android:title="@string/choose_competitor_store"/>
        <item
            android:id="@+id/detachCompetitorStoreMenuItem"
            android:title="@string/detach_competitor_store"/>
    </group>
</menu>