<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.E4_analysis_articles_list_screen.SearchArticlesByStructureFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/search_articles_by_structure_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:padding="0dp"
        android:paddingTop="@dimen/double_padding">

        <!-- Sektor -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/PC_ExposedDropdownMenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sector">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/search_articles_sector_dropdown"
                style="@style/PC_ExposedDropdownMenuStyle"
                android:textAppearance="@style/PC_ExposedDropdownMenuTextAppearanceBody1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Dział  -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/PC_ExposedDropdownMenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/department">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/search_articles_department_dropdown"
                style="@style/PC_ExposedDropdownMenuStyle"
                android:textAppearance="@style/PC_ExposedDropdownMenuTextAppearanceBody1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Przyciski  -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginBottom="@dimen/half_margin"
            android:paddingTop="@dimen/padding">

            <Button
                android:id="@+id/search_articles_by_structures_button_clear"
                style="@style/PC_MaterialButtonStyle"
                android:text="@string/caption_clear" />

            <Button
                android:id="@+id/search_articles_by_structures_button_search"
                style="@style/PC_MaterialButtonStyle"
                android:text="@string/caption_search" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
