<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        android:layout_marginBottom="@dimen/mtrl_card_spacing"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_view_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Nagłówek -->
            <TextView
                android:id="@+id/label_analysis_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_analysis_header"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                card_view:layout_constraintStart_toStartOf="@+id/guideline_analysis_item"
                card_view:layout_constraintTop_toTopOf="parent" />

            <!-- data utworzenia -->
            <TextView
                android:id="@+id/label_analysis_creation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_analysis_creation_date"
                card_view:layout_constraintStart_toStartOf="@+id/guideline_analysis_item"
                card_view:layout_constraintTop_toBottomOf="@+id/label_analysis_header" />

            <TextView
                android:id="@+id/analysis_creation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2019-08-31"
                card_view:layout_constraintStart_toEndOf="@+id/label_analysis_creation_date"
                card_view:layout_constraintTop_toBottomOf="@+id/label_analysis_header" />

            <!-- planowana data wykonania -->
            <TextView
                android:id="@+id/label_analysis_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_analysis_due_date"
                card_view:layout_constraintStart_toStartOf="@+id/guideline_analysis_item"
                card_view:layout_constraintTop_toBottomOf="@+id/label_analysis_creation_date" />

            <TextView
                android:id="@+id/analysis_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2019-08-31"
                card_view:layout_constraintStart_toEndOf="@+id/label_analysis_due_date"
                card_view:layout_constraintTop_toBottomOf="@+id/analysis_creation_date" />

            <!-- data wykonania -->
            <TextView
                android:id="@+id/label_analysis_finish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_analysis_finish_date"
                card_view:layout_constraintStart_toStartOf="@+id/guideline_analysis_item"
                card_view:layout_constraintTop_toBottomOf="@+id/label_analysis_due_date" />

            <TextView
                android:id="@+id/analysis_finish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintStart_toEndOf="@+id/label_analysis_finish_date"
                card_view:layout_constraintTop_toBottomOf="@+id/analysis_due_date" />

            <!-- data potwierdzenia -->
            <TextView
                android:id="@+id/label_analysis_confirmation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_analysis_confirmation_date"
                card_view:layout_constraintStart_toStartOf="@+id/guideline_analysis_item"
                card_view:layout_constraintTop_toBottomOf="@+id/label_analysis_finish_date" />

            <TextView
                android:id="@+id/analysis_confirmation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintStart_toEndOf="@+id/label_analysis_confirmation_date"
                card_view:layout_constraintTop_toBottomOf="@+id/analysis_finish_date" />

            <ProgressBar
                android:id="@+id/test_analysis_item__progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:minWidth="200dp"
                android:minHeight="50dp"
                android:progress="1"
                android:visibility="gone"
                card_view:layout_constraintStart_toStartOf="@+id/guideline_analysis_item"
                card_view:layout_constraintTop_toBottomOf="@+id/label_analysis_confirmation_date" />

            <!-- guideline -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_analysis_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                card_view:layout_constraintGuide_begin="@dimen/card_view_interior_left_guideline" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>